--- a/css/stylefav.css
+++ b/css/stylefav.css
@@ -11,7 +11,7 @@ h1 {
 
 .book-cards {
     display: grid;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
     margin-top: 20px;
